implement sincron call
